--- a/openoffice-base-devel/trunk/startcenter.desktop
+++ b/openoffice-base-devel/trunk/startcenter.desktop
@@ -1,48 +1,50 @@
 [Desktop Entry]
 Version=1.0
 Terminal=false
-TryExec=ooffice
-Exec=openoffice.org3 %U
+#TryExec=openoffice-devel
+Exec=openoffice-devel %U
+MimeType=application/vnd.openofficeorg.extension;
 Icon=startcenter
 Type=Application
 Categories=Office;X-SuSE-Core-Office;
 StartupNotify=false
 InitialPreference=5
-Name=OpenOffice.org 3.4
-Name[af]=OpenOffice.org 3.4
+Name=OpenOffice.org devel
+Name[af]=OpenOffice.org devel
 Name[ar]=أوبن أفيس.أورج
-Name[be@latin]=OpenOffice.org 3.4
-Name[ca]=OpenOffice.org 3.4
-Name[cs]=OpenOffice.org 3.4
-Name[da]=OpenOffice.org 3.4
-Name[de]=OpenOffice.org 3.4
+Name[be@latin]=OpenOffice.org devel
+Name[ca]=OpenOffice.org devel
+Name[cs]=OpenOffice.org devel
+Name[da]=OpenOffice.org devel
+Name[de]=OpenOffice.org devel
 Name[dz]=ཨོ་པཱན་ཨོ་ཕིསི.ཨོ་ཨར་ཇི།
-Name[el]=OpenOffice.org 3.4
-Name[en_CA]=OpenOffice.org 3.4
-Name[en_GB]=OpenOffice.org 3.4
-Name[es]=OpenOffice.org 3.4
-Name[et]=OpenOffice.org 3.4
-Name[eu]=OpenOffice.org 3.4
-Name[fi]=OpenOffice.org 3.4
-Name[fr]=OpenOffice.org 3.4
-Name[gl]=OpenOffice.org 3.4
-Name[he]=OpenOffice.org 3.4
-Name[hu]=OpenOffice.org 3.4
-Name[it]=OpenOffice.org 3.4
-Name[ko]=OpenOffice.org 3.4
-Name[lt]=OpenOffice.org 3.4
-Name[nb]=OpenOffice.org 3.4
+Name[el]=OpenOffice.org devel
+Name[en_CA]=OpenOffice.org devel
+Name[en_GB]=OpenOffice.org devel
+Name[es]=OpenOffice.org devel
+Name[et]=OpenOffice.org devel
+Name[eu]=OpenOffice.org devel
+Name[fi]=OpenOffice.org devel
+Name[fr]=OpenOffice.org devel
+Name[gl]=OpenOffice.org devel
+Name[he]=OpenOffice.org devel
+Name[hu]=OpenOffice.org devel
+Name[it]=OpenOffice.org devel
+Name[ko]=OpenOffice.org devel
+Name[lt]=OpenOffice.org devel
+Name[nb]=OpenOffice.org devel
 Name[ne]=ओपनअफिस डट अर्ग
-Name[nl]=OpenOffice.org 3.4
-Name[oc]=OpenOffice.org 3.4
-Name[pl]=OpenOffice.org 3.4
+Name[nl]=OpenOffice.org devel
+Name[oc]=OpenOffice.org devel
+Name[pl]=OpenOffice.org devel
 Name[ps]=اوپنافس.ورګ
-Name[pt]=OpenOffice.org 3.4
-Name[pt_BR]=OpenOffice.org 3.4
-Name[sl]=OpenOffice.org 3.4
-Name[sr]=OpenOffice.org 3.4
-Name[sr@latin]=OpenOffice.org 3.4
-Name[sv]=OpenOffice.org 3.4
-Name[vi]=OpenOffice.org 3.4
-Name[zh_CN]=OpenOffice.org 3.4
+Name[pt]=OpenOffice.org devel
+Name[pt_BR]=OpenOffice.org devel
+Name[sl]=OpenOffice.org devel
+Name[sr]=OpenOffice.org devel
+Name[sr@latin]=OpenOffice.org devel
+Name[sv]=OpenOffice.org devel
+Name[vi]=OpenOffice.org devel
+Name[zh_CN]=OpenOffice.org devel
 GenericName=Office
+Comment=The office productivity suite compatible to the open and standardized ODF document format. Supported by Sun Microsystems.
