upgpkg: kdeplasma-applets-networkmanagement git20110126-2 add force option (FS#22620)
git-svn-id: file:///srv/repos/svn-packages/svn@107851 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeplasma-applets-networkmanagement/trunk/PKGBUILD
+++ b/kdeplasma-applets-networkmanagement/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=kdeplasma-applets-networkmanagement
 pkgver=git20110126
-pkgrel=1
+pkgrel=2
 pkgdesc="KDE4 Network Management and plasmoid"
 arch=('i686' 'x86_64')
 url="http://www.kde.org/"
@@ -19,6 +19,7 @@ install=${pkgname}.install
 #git clone git://git.kde.org/networkmanagement
 source=("ftp://ftp.archlinux.org/other/kde/networkmanagement-${pkgver}.tar.bz2")
 md5sums=('1c6051885f03f31b47ebf2f4267e1cad')
+options=('force')
 
 build() {
   cd ${srcdir}
