upgpkg: soprano 2.5.63-2 add remove redland dependencies in makedependencies to build redland backend
git-svn-id: file:///srv/repos/svn-packages/svn@107866 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/soprano/trunk/PKGBUILD
+++ b/soprano/trunk/PKGBUILD
@@ -4,13 +4,13 @@
 
 pkgname=soprano
 pkgver=2.5.63
-pkgrel=1
+pkgrel=2
 pkgdesc='A library which provides a highly usable object-oriented C++/Qt4 framework for RDF data'
 arch=('i686' 'x86_64')
 url='http://soprano.sourceforge.net/'
 license=('GPL' 'LGPL')
 depends=('qt' 'clucene' 'redland' 'libiodbc' 'virtuoso')
-makedepends=('cmake' 'openjdk6')
+makedepends=('cmake' 'openjdk6' 'postgresql-libs' 'libmysqlclient' 'unixodbc')
 source=("http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('bef6147f1245cd99aa9ad1a37f7d48ac')
 
