upgpkg: kwebkitpart 1.1-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@107871 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kwebkitpart/trunk/PKGBUILD
+++ b/kwebkitpart/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $Id $
+# $Id$
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwebkitpart
-pkgver=0.9.6
+pkgver=1.1
 pkgrel=1
 pkgdesc="A web browser component for KDE"
 url="http://opendesktop.org/content/show.php?content=127960"
@@ -11,9 +11,8 @@ license=('GPL')
 depends=('kdebase-runtime')
 makedepends=('cmake' 'automoc4')
 install=${pkgname}.install
-source=("http://opendesktop.org/CONTENT/content-files/127960-${pkgname}-${pkgver}.tar.bz2")
-md5sums=('017b56eae5462617bf5fded092280e1f')
-options=('force')
+source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('1a72499b91d668409ed8ea8e5e71b398')
 
 build() {
   cd ${srcdir}
