upgpkg: devilspie 0.22-4 make it compile against gtk2 2.22
git-svn-id: file:///srv/repos/svn-packages/svn@107892 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/devilspie/trunk/PKGBUILD
+++ b/devilspie/trunk/PKGBUILD
@@ -5,20 +5,24 @@
 
 pkgname=devilspie
 pkgver=0.22
-pkgrel=3
+pkgrel=4
 pkgdesc="x11 window matching utility"
 arch=('i686' 'x86_64')
 url="http://www.burtonini.com/blog/computers/devilspie"
 license=('GPL')
-depends=('libwnck>=2.24')
-makedepends=('perlxml' 'pkgconfig')
+depends=('libwnck')
+makedepends=('pkgconfig' 'intltool' 'gnome-common')
 source=("http://www.burtonini.com/computing/$pkgname-$pkgver.tar.gz")
 md5sums=('4190e12f99ab92c0427e457d9fbfe231')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
+  sed -i -e '/-DG.*_DISABLE_DEPRECATED/d' src/Makefile.am
+
+  ./autogen.sh
+
   ./configure --prefix=/usr --sysconfdir=/etc
-  make || return 1
+  make
   make prefix=$pkgdir/usr install
   # Make and install blank config
   mkdir -p $pkgdir/etc/devilspie
