add missing patch and missing okteta.install
git-svn-id: file:///srv/repos/svn-packages/svn@107901 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdesdk/trunk/PKGBUILD
+++ b/kdesdk/trunk/PKGBUILD
@@ -31,8 +31,10 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdesdk')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'kdepim-runtime' 'subversion'
         'docbook-xsl' 'antlr2' 'kdebase-konqueror')
-source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('af8d67b1823f72b759ac604a1be15d8ec91b2b2c')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
+        'fix-python2-path.patch')
+sha1sums=('af8d67b1823f72b759ac604a1be15d8ec91b2b2c'
+        'd05ca0231869c484fd3861955d960a60aff7dcfb')
 
 build() {
 	cd ${srcdir}/${pkgbase}-${pkgver}
