upgpkg: konq-plugins svn1217478-1 new snapshot
git-svn-id: file:///srv/repos/svn-packages/svn@107906 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/konq-plugins/trunk/PKGBUILD
+++ b/konq-plugins/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=konq-plugins
-pkgver=svn1183577
+pkgver=svn1217478
 pkgrel=1
 pkgdesc="Extra plugins for Konqueror"
 arch=('i686' 'x86_64')
@@ -12,15 +12,15 @@ license=('LGPL')
 depends=('kdebase-konqueror' 'tidyhtml' 'kwebkitpart')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'docbook-xsl')
 install=${pkgname}.install
-# svn co -q svn://websvn.kde.org:443/home/kde/trunk/extragear/base/konq-plugins
+# svn co -q svn://websvn.kde.org:443/home/kde/trunk/playground/base/konq-plugins
 source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('7eef9995b5d71c1156922bd623aca5e1')
+md5sums=('30a12b1f39ea3049e29719f529d1459c')
 
 build() {
   cd ${srcdir}
   mkdir build
   cd build
-  cmake ../${pkgname} \
+  cmake ../${pkgname}-${pkgver} \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
   make
