prepare next build; use system makeflags(!distcc broke it); hide the printer menu entry; link unopkg
git-svn-id: file:///srv/repos/svn-packages/svn@107916 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openoffice-base/trunk/PKGBUILD
+++ b/openoffice-base/trunk/PKGBUILD
@@ -110,7 +110,7 @@ source=(ftp://ftp.archlinux.org/other/openoffice/${_OO_milestone}.tar.xz
 	${_additional_source_url}/831126a1ee5af269923cfab6050769fe-mysql-connector-cpp.zip
 	${_additional_source_url}/067201ea8b126597670b5eff72e1f66c-mythes-1.2.0.tar.gz
 	${_additional_source_url}/cf8a6967f7de535ae257fa411c98eb88-mdds_0.3.0.tar.bz2)
-options=('!distcc' '!ccache')
+#options=('!distcc' '!ccache')
 md5sums=('2a1d7855b8fc775ab830980fb849b5b2'
          'e3a0b76dcd876f3d721ee7183729153d'
          '9dce6faee2ca7bbef7921cab209f6be2'
@@ -228,7 +228,7 @@ build() {
 	# some speedups
 	echo ${MAKEFLAGS}
 	export SMP=${MAKEFLAGS/-j/}; echo ${SMP}
-	export SMP="16"
+#	export SMP="16"
 	MAXMODULESFLAG="-P${SMP}"
 	MAXPROCESSESFLAG="-P${SMP}"
 	export nodep=true
@@ -433,9 +433,9 @@ package_openoffice-base() {
 
         # make symlinks
         cd ${pkgdir}/usr/bin
-#        ln -s /usr/lib/openoffice/program/soffice soffice
         ln -s /usr/lib/openoffice.org3/program/soffice openoffice
-        ln -s /usr/lib/openoffice.org3/program/spadmin spadmin
+		ln -s /usr/lib/openoffice.org3/program/spadmin openoffice-printeradmin
+        ln -s /usr/lib/openoffice.org3/program/unopkg openoffice-unopkg
 
 	# link the mozilla-plugin
 	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
@@ -447,6 +447,9 @@ package_openoffice-base() {
 	for desktopz in *.desktop
 	   do mv $desktopz openoffice-$desktopz
 	done
+	# hide the printer configuration tool that is not needed when we use cups
+	echo "NoDisplay=true" >> ${pkgdir}/usr/share/applications/openoffice-printeradmin.desktop
+
 	# fix for unixwrapper usage
 	ln -s /usr/lib/openoffice.org3/program/soffice.bin ${pkgdir}/usr/lib/openoffice.org3/program/openoffice.bin
 }
