upgpkg: vdpau-video 0.7.3pre5-1 update to 0.7.3pre5, compatible with >=1.0.8
git-svn-id: file:///srv/repos/svn-packages/svn@107917 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/vdpau-video/trunk/PKGBUILD
+++ b/vdpau-video/trunk/PKGBUILD
@@ -1,7 +1,8 @@
 # $Id$
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
 pkgname=vdpau-video
-pkgver=0.7.2
+pkgver=0.7.3pre5
+_pkgverbase=0.7.3.pre5
 pkgrel=1
 pkgdesc="VDPAU backend for VA API"
 arch=('i686' 'x86_64')
@@ -10,16 +11,12 @@ license=('GPL')
 depends=('libva' 'libvdpau')
 makedepends=('mesa')
 options=('!libtool')
-source=(http://www.splitted-desktop.com/~gbeauchesne/vdpau-video/${pkgname}-${pkgver}.tar.gz
-        enable-glx.patch)
-md5sums=('6aac5517fb76a0cd539d0fb77def8b2d'
-         'e184df00b34a9334dee4b71d52067883')
+source=(http://www.splitted-desktop.com/~gbeauchesne/vdpau-video/${pkgname}-${_pkgverbase}.tar.gz)
+md5sums=('723d39320cc12eda8c9a10e952edd463')
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -Np1 -i $srcdir/enable-glx.patch
-  autoreconf -fi
-  ./configure --prefix=/usr --enable-glx
+  cd "${srcdir}/${pkgname}-${_pkgverbase}"
+  ./configure --prefix=/usr
   make
   make DESTDIR="${pkgdir}" install
 }
