prepare next build; use system makeflags(!distcc broke it); hide the printer menu entry
git-svn-id: file:///srv/repos/svn-packages/svn@107920 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openoffice-base-devel/trunk/PKGBUILD
+++ b/openoffice-base-devel/trunk/PKGBUILD
@@ -109,7 +109,7 @@ source=(${_OO_milestone}.tar.xz
 	${_additional_source_url}/067201ea8b126597670b5eff72e1f66c-mythes-1.2.0.tar.gz
 	${_additional_source_url}/cf8a6967f7de535ae257fa411c98eb88-mdds_0.3.0.tar.bz2
 	${_additional_source_url}/ba2930200c9f019c2d93a8c88c651a0f-flow-engine-0.9.4.zip)
-options=('!distcc' '!ccache')
+#options=('!distcc' '!ccache')
 md5sums=('6f79df8abccdabab2a3a38f5e78037f2'
          'e3a0b76dcd876f3d721ee7183729153d'
          'e1cbc51a71749066200b282d89f698f9'
@@ -227,7 +227,7 @@ build() {
 	# some speedups
 	echo ${MAKEFLAGS}
 	export SMP=${MAKEFLAGS/-j/}; echo ${SMP}
-	export SMP="16"
+#	export SMP="16"
 #	export SMP="1"
 	MAXMODULESFLAG="-P${SMP}"
 	MAXPROCESSESFLAG="-P${SMP}"
@@ -434,9 +434,8 @@ package_openoffice-base-devel() {
 
         # make symlinks
 	cd ${pkgdir}/usr/bin
-#	rm -f soffice spadmin
 	ln -sf /usr/lib/openoffice.org3-devel/program/soffice openoffice-devel
-	ln -sf /usr/lib/openoffice.org3-devel/program/spadmin spadmin-devel
+	ln -sf /usr/lib/openoffice.org3-devel/program/spadmin openoffice-devel-printeradmin
 	ln -sf /usr/lib/openoffice.org3-devel/program/unopkg unopkg-devel
 
 	# link the mozilla-plugin
@@ -451,19 +450,19 @@ package_openoffice-base-devel() {
 
 	## Develize it!
 	cd ${pkgdir}/usr/lib/
-	mv openoffice.org openoffice.org-devel
-	mv openoffice.org3 openoffice.org3-devel
+	mv -v openoffice.org openoffice.org-devel
+	mv -v openoffice.org3 openoffice.org3-devel
 	# fix links
-	ln -sf /usr/lib/openoffice.org-devel/basis3.4 ${pkgdir}/usr/lib/openoffice.org3-devel/basis-link
-	ln -s /usr/lib/openoffice.org3-devel/program/soffice.bin ${pkgdir}/usr/lib/openoffice.org3-devel/program/soffice-dev.bin
-	sed -i -e 's|Exec=/usr/bin/spadmin|Exec=/usr/bin/spadmin-devel|g' ${pkgdir}/usr/share/applications/openoffice-devel-printeradmin.desktop
-
-	for i in `find ${pkgdir}/usr/share/icons -name '*.png'`  ; do  mv $i `dirname $i`/devel-`basename $i` ; done ;
+	ln -vsf /usr/lib/openoffice.org-devel/basis3.4 ${pkgdir}/usr/lib/openoffice.org3-devel/basis-link
+	ln -vs /usr/lib/openoffice.org3-devel/program/soffice.bin ${pkgdir}/usr/lib/openoffice.org3-devel/program/soffice-dev.bin
+	
+	for i in `find ${pkgdir}/usr/share/icons -name '*.png'`  ; do  mv -v $i `dirname $i`/devel-`basename $i` ; done ;
 	
 	cd ${pkgdir}/usr/share/applications/
 	sed -i -e 's|Icon=|Icon=devel-|g' ${pkgdir}/usr/share/applications/*.desktop
 	sed -i -e 's|OpenOffice\.org\ 3\.4|OpenOffice\.org\ devel|g' ${pkgdir}/usr/share/applications/*.desktop
-
+	# hide the printer configuration tool that is not needed when we use cups
+	echo "NoDisplay=true" >> ${pkgdir}/usr/share/applications/openoffice-devel-printeradmin.desktop
 
 	# fix for unixwrapper usage
 	ln -vs /usr/lib/openoffice.org3-devel/program/soffice.bin ${pkgdir}/usr/lib/openoffice.org3-devel/program/openoffice-devel.bin
@@ -484,7 +483,7 @@ package_openoffice-sdk-devel() {
 
 	# move all to /usr/lib
 	mkdir -p ${pkgdir}/usr/lib
-	mv ${pkgdir}/opt/* ${pkgdir}/usr/lib/
+	mv -v ${pkgdir}/opt/* ${pkgdir}/usr/lib/
 	rmdir ${pkgdir}/opt
 
 	cd ${pkgdir}/usr/lib/openoffice.org/basis3.4/sdk
@@ -513,5 +512,5 @@ package_openoffice-sdk-devel() {
 	
 	## Develize it!
 	cd ${pkgdir}/usr/lib/
-	mv openoffice.org openoffice.org-devel
+	mv -v openoffice.org openoffice.org-devel
 }
