upgpkg: konq-plugins svn1217499-1 new snapshot
git-svn-id: file:///srv/repos/svn-packages/svn@107921 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/konq-plugins/trunk/PKGBUILD
+++ b/konq-plugins/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=konq-plugins
-pkgver=svn1217478
+pkgver=svn1217499
 pkgrel=1
 pkgdesc="Extra plugins for Konqueror"
 arch=('i686' 'x86_64')
@@ -12,11 +12,16 @@ license=('LGPL')
 depends=('kdebase-konqueror' 'tidyhtml' 'kwebkitpart')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'docbook-xsl')
 install=${pkgname}.install
-# svn co -q svn://websvn.kde.org:443/home/kde/trunk/playground/base/konq-plugins
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('30a12b1f39ea3049e29719f529d1459c')
+# svn co -q svn://websvn.kde.org:443/home/kde/trunk/KDE/kdebase/apps/konq-plugins
+source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2"
+        'CMakeLists.patch')
+md5sums=('1abdef7d120d8caf6f6709a3db032893'
+         '4652be501c5b81370010f3c28fd02bc3')
 
 build() {
+  cd ${srcdir}/${pkgname}-${pkgver}
+  patch -Np0 -i ${srcdir}/CMakeLists.patch
+
   cd ${srcdir}
   mkdir build
   cd build
