--- a/kernel26/trunk/config
+++ b/kernel26/trunk/config
@@ -5018,7 +5018,7 @@ CONFIG_NFS_V4=y
 CONFIG_NFS_FSCACHE=y
 # CONFIG_NFS_USE_LEGACY_DNS is not set
 CONFIG_NFS_USE_KERNEL_DNS=y
-CONFIG_NFS_USE_NEW_IDMAPPER=y
+# CONFIG_NFS_USE_NEW_IDMAPPER is not set
 CONFIG_NFSD=m
 # CONFIG_NFSD_DEPRECATED is not set
 CONFIG_NFSD_V2_ACL=y
