upgpkg: kernel26 2.6.37-4 added i915 patch, ready for signoff now
git-svn-id: file:///srv/repos/svn-packages/svn@107938 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kernel26/trunk/PKGBUILD
+++ b/kernel26/trunk/PKGBUILD
@@ -9,8 +9,8 @@ _basekernel=2.6.37
 pkgver=${_basekernel}
 pkgrel=4
 makedepends=('xmlto' 'docbook-xsl')
-#_patchname="patch-${pkgver}-${pkgrel}-ARCH"
-_patchname="patch-${pkgver}-2-ARCH"
+_patchname="patch-${pkgver}-${pkgrel}-ARCH"
+#_patchname="patch-${pkgver}-2-ARCH"
 arch=(i686 x86_64)
 license=('GPL2')
 url="http://www.kernel.org"
@@ -22,7 +22,7 @@ source=(ftp://ftp.kernel.org/pub/linux/kernel/v2.6/linux-$_basekernel.tar.bz2
         # standard config files for mkinitcpio ramdisk
         kernel26.preset)
 md5sums=('c8ee37b4fdccdb651e0603d35350b434'
-         '476a10111337ee918ab2e0802ccb2f5b'
+         '732176aeb134678b4e369e1d5d5fca2e'
          'cc49d27766f55df22f9cb78228880e78'
          '8f8059fa252e2f81b31be0c1bdbef123'
          '25584700a0a679542929c4bed31433b6')
