--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,20 +4,27 @@
 
 pkgname=linux-atm
 pkgver=2.5.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Drivers and tools to support ATM networking under Linux."
 arch=('i686' 'x86_64')
 depends=('glibc')
-source=(http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tgz)
 url="http://linux-atm.sourceforge.net/"
 license=(GPL)
+source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tgz
+        man-pages.patch)
+md5sums=('9560b0e1f410a05b849dfdab465dd758'
+         '181390736336cdb615ae32f1ae5acfa6')
 options=(!libtool !makeflags)
-md5sums=('9560b0e1f410a05b849dfdab465dd758')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
-  ./configure --prefix=/usr --sysconfdir=/etc || return 1
-  make || return 1
-  make DESTDIR=$pkgdir install
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i ../man-pages.patch
+  ./configure --prefix=/usr --sysconfdir=/etc
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
 
