upgpkg: glew 1.5.7-2 fix shared lib permissions
git-svn-id: file:///srv/repos/svn-packages/svn@107946 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/glew/trunk/PKGBUILD
+++ b/glew/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=glew
 pkgver=1.5.7
-pkgrel=1
+pkgrel=2
 pkgdesc="The OpenGL Extension Wrangler Library"
 arch=('i686' 'x86_64')
 url="http://glew.sourceforge.net"
@@ -23,6 +23,5 @@ package() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   make GLEW_DEST="${pkgdir}/usr" install
   install -D -m644 LICENSE.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+  chmod 0755 "${pkgdir}/usr/lib/libGLEW.so.${pkgver}"
 }
-
-# vim: set noexpandtab tabstop=8 shiftwidth=8 textwidth=132 autoindent
