upgpkg: aspell 0.60.6-5 Fixed .install file for case when texinfo is not installed, Set config file directory to /etc (close FS#22496)
git-svn-id: file:///srv/repos/svn-packages/svn@107951 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/aspell/trunk/PKGBUILD
+++ b/aspell/trunk/PKGBUILD
@@ -7,33 +7,30 @@
 pkgname=aspell
 pkgver=0.60.6
 _pkgmajorver=0.60
-pkgrel=4
+pkgrel=5
 pkgdesc="A spell checker designed to eventually replace Ispell"
 url="http://aspell.net/"
 arch=('i686' 'x86_64')
 license=('LGPL')
 depends=('gcc-libs' 'ncurses>=5.6-7')
 optdepends=('perl: to import old dictionaries')
-options=(!libtool)
+options=('!libtool')
 install=aspell.install
 source=(ftp://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('bc80f0198773d5c05086522be67334eb')
+sha1sums=('335bcb560e00f59d89ec9e4c4114c325fb0e65f4')
 
 build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
+	cd "${srcdir}/${pkgname}-${pkgver}"
 
-	./configure --prefix=/usr || return 1
-	make || return 1
+	./configure --prefix=/usr --sysconfdir=/etc
+	make
 }
 
 package() {
-	cd ${srcdir}/${pkgname}-${pkgver}
+	cd "${srcdir}/${pkgname}-${pkgver}"
 	
-	make DESTDIR=${pkgdir} install || return 1
+	make DESTDIR="${pkgdir}" install
 	ln -s ${pkgname}-${_pkgmajorver} \
-		${pkgdir}/usr/lib/${pkgname} || return 1
-
-	# cleanup info files
-	rm ${pkgdir}/usr/share/info/dir || return 1
-	gzip ${pkgdir}/usr/share/info/* || return 1
+		"${pkgdir}/usr/lib/${pkgname}"
 }
