upgpkg: aria2 1.10.9-1 Updating to 1.10.9
git-svn-id: file:///srv/repos/svn-packages/svn@107959 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/aria2/trunk/PKGBUILD
+++ b/aria2/trunk/PKGBUILD
@@ -1,8 +1,10 @@
+# $Id$
+# Maintainer: Angel Velasquez <angvp@archlinux.org>
 # Contributor: Alexander Fehr <pizzapunk gmail com>
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
+# Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=aria2
-pkgver=1.10.8
+pkgver=1.10.9
 pkgrel=1
 pkgdesc="Download utility that supports HTTP(S), FTP, BitTorrent, and Metalink"
 arch=('i686' 'x86_64')
@@ -10,7 +12,7 @@ url="http://aria2.sourceforge.net/"
 license=('GPL')
 depends=('gnutls' 'libxml2' 'sqlite3' 'c-ares' 'ca-certificates')
 source=(http://downloads.sourceforge.net/aria2/aria2-${pkgver}.tar.bz2)
-md5sums=('cffc58c796e51cb4fea1a02deee2a750')
+md5sums=('856cd88e75c7b893b42f4b6b8f2c0ad1')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
