--- a/yakuake/trunk/PKGBUILD
+++ b/yakuake/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: leeghoofd <abcdefg@solcon.nl>
 
 pkgname=yakuake
-pkgver=2.9.7
+pkgver=2.9.8
 pkgrel=1
 pkgdesc="A KDE konsole application with the look and feel of that in the Quake engine"
 arch=('i686' 'x86_64')
@@ -12,8 +12,9 @@ url="http://yakuake.kde.org"
 license=('GPL')
 depends=('kdebase-konsole')
 makedepends=('cmake' 'automoc4')
-source=("http://download.berlios.de/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('c5a6d1f50ab9464d62563cdb18d6afb7')
+install="${pkgname}.install"
+source=("http://download.kde.org/stable/${pkgname}/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('a53ae52fc530912b74155a586d92a1fe')
 
 build() {
   cd ${srcdir}
