these plugins are disabled by default now
git-svn-id: file:///srv/repos/svn-packages/svn@107973 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdepim/trunk/PKGBUILD
+++ b/kdepim/trunk/PKGBUILD
@@ -176,7 +176,7 @@ package_kdepim-kontact() {
 	conflcits=('kdepim-kontactinterfaces')
 	replaces=('kdepim-kontactinterfaces')
 	for i in kontact/src kontact/pics doc/kontact\
-		kontact/plugins/planner kontact/plugins/specialdates kontact/plugins/summary; do
+		kontact/plugins/summary; do
 		cd $srcdir/build/${i}
 		make DESTDIR=$pkgdir install
 	done
