--- a/grub2/trunk/PKGBUILD
+++ b/grub2/trunk/PKGBUILD
@@ -15,12 +15,9 @@ pkgrel=1
 url="http://www.gnu.org/software/grub/"
 arch=('i686' 'x86_64')
 license=('GPL3')
-optdepends=()
 makedepends=('bdf-unifont' 'python2' 'xz' 'autogen' 'texinfo' 'help2man' 'gettext' 'device-mapper')
 options=(strip purge docs zipman !emptydirs)
 groups=('grub2')
-conflicts=()
-provides=()
 
 source=("ftp://alpha.gnu.org/gnu/grub/grub-${pkgver}.tar.gz"
 	"ftp://ftp.archlinux.org/other/grub2/grub2_extras_lua_r${_grub2_lua_ver}.tar.xz"
@@ -38,6 +35,16 @@ noextract=("grub2_extras_lua_r${_grub2_lua_ver}.tar.xz"
 	"grub2_extras_ntldr-img_r${_grub2_ntldr_ver}.tar.xz"
 	"grub2_extras_915resolution_r${_grub2_915_ver}.tar.xz")
 
+sha1sums=('866b6979974ad7209d236cb4e1819039f0bd1c6d'
+          'f116fed72eb70da1d503cf3c225dce68d658dabd'
+          'b04994c005910b4bf123f034b30109d5c8d6fd86'
+          '963517b6f178d3cec3ff65f64cf6128cbde2f515'
+          '644fe2bd6edaff03bc2e7a27bf1c0845a4568d6f'
+          '2c22c7e900e4da9a555d26d455ed3fbf974d553d'
+          '23cb743d0b864d415b033f71c79ebf182e909264'
+          '88c15058f5079c470d8a5061e0de0f1e8fe1effd'
+          '82a27eca5277218cf57c6c5767e0b17a72f62229'
+          '22bd1a4c18d8b93130ca46348c2a9ea2f8b90c6b')
 
 build() {
 	# set architecture dependent variables
@@ -91,7 +98,8 @@ build_grub2-common_and_bios() {
 		--enable-grub-mkfont --prefix=/usr \
 		--bindir=/bin --sbindir=/sbin \
 		--mandir=/usr/share/man --infodir=/usr/share/info \
-		--sysconfdir=/etc
+		--sysconfdir=/etc --enable-nls \
+		--program-transform-name=s,grub,grub
 	CFLAGS="" make 
 }
 
@@ -122,7 +130,8 @@ build_grub2-efi() {
 		--host=${CARCH}-unknown-linux-gnu \
 		--prefix=/usr --bindir=/bin \
 		--sbindir=/sbin --mandir=/usr/share/man \
-		--infodir=/usr/share/info --sysconfdir=/etc
+		--infodir=/usr/share/info --sysconfdir=/etc \
+		--enable-nls --program-transform-name=s,grub,grub
 	CFLAGS="" make 
 }
 
@@ -130,7 +139,7 @@ package_grub2-common() {
 	pkgdesc="The GNU GRand Unified Bootloader version 2 - Files common for all platforms"
 	install="grub2.install"
 	depends=('xz' 'freetype2' 'device-mapper')
-	conflicts=('grub2')
+	conflicts=('grub2' 'grub')
 	backup=('boot/grub/grub.cfg' 'etc/default/grub' 'etc/grub.d/40_custom')
   
 	cd ${srcdir}/grub2_bios-${pkgver}
@@ -192,15 +201,6 @@ package_grub2-efi-i386() {
 	make DESTDIR=${pkgdir} install 
 
 	## remove non platform-specific files
-	rm -rf ${pkgdir}/{bin,sbin,etc,usr/share/info,usr/share/man,usr/lib/grub}
+        rm -rf ${pkgdir}/{boot,bin,sbin,etc,usr/share}
+        rm ${pkgdir}/usr/lib/grub/{grub-mkconfig_lib,update-grub_lib}
 }
-sha1sums=('866b6979974ad7209d236cb4e1819039f0bd1c6d'
-          'f116fed72eb70da1d503cf3c225dce68d658dabd'
-          'b04994c005910b4bf123f034b30109d5c8d6fd86'
-          '963517b6f178d3cec3ff65f64cf6128cbde2f515'
-          '644fe2bd6edaff03bc2e7a27bf1c0845a4568d6f'
-          '2c22c7e900e4da9a555d26d455ed3fbf974d553d'
-          '23cb743d0b864d415b033f71c79ebf182e909264'
-          '88c15058f5079c470d8a5061e0de0f1e8fe1effd'
-          '82a27eca5277218cf57c6c5767e0b17a72f62229'
-          '22bd1a4c18d8b93130ca46348c2a9ea2f8b90c6b')
