--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,8 +6,8 @@
 
 pkgname=('gcc' 'gcc-libs' 'gcc-fortran' 'gcc-objc' 'gcc-ada')
 pkgver=4.5.2
-pkgrel=5
-#_snapshot=4.5.2-RC-20101208
+pkgrel=6
+_snapshot=4.5-20110127
 _libstdcppmanver=4.5.2		# Note: check source directory name when updating this
 pkgdesc="The GNU Compiler Collection"
 arch=('i686' 'x86_64')
@@ -15,17 +15,17 @@ license=('GPL' 'LGPL' 'custom')
 url="http://gcc.gnu.org"
 makedepends=('binutils>=2.21' 'libmpc' 'cloog-ppl>=0.15.9-2' 'elfutils' 'gcc-ada' 'dejagnu')
 options=('!libtool' '!emptydirs')
-source=(ftp://gcc.gnu.org/pub/gcc/releases/gcc-${pkgver}/gcc-{core,g++,fortran,objc,ada,testsuite}-${pkgver}.tar.bz2
-	#ftp://gcc.gnu.org/pub/gcc/snapshots/${_snapshot}/gcc-{core,g++,fortran,objc,ada,testsuite}-${_snapshot}.tar.bz2
+source=(#ftp://gcc.gnu.org/pub/gcc/releases/gcc-${pkgver}/gcc-{core,g++,fortran,objc,ada,testsuite}-${pkgver}.tar.bz2
+	ftp://gcc.gnu.org/pub/gcc/snapshots/${_snapshot}/gcc-{core,g++,fortran,objc,ada,testsuite}-${_snapshot}.tar.bz2
 	ftp://gcc.gnu.org/pub/gcc/libstdc++/doxygen/libstdc++-api-${_libstdcppmanver}.man.tar.bz2
 	gcc_pure64.patch
 	gcc-hash-style-both.patch)
-md5sums=('aa9e36bec080452372bfba793428ee82'
-         '9821f1c61e43755866861485ff364e90'
-         '8cc545fda70085c78076d79e0e23962a'
-         '3561c6585e9062105cc3591a8c39d7dc'
-         'ee24023972f337fbc22202d6d219a727'
-         '29ae615438aba0bd3384b94bac54c235'
+md5sums=('7dbdf06186dc98955221b2f7b987645b'
+         '4893036a98d8bedf44fe0741dfec6e1f'
+         'c741c614e975c858cffb9e78b0b5124f'
+         'b141fadc984cc0c1c0f15feb16db14e5'
+         '067672b640d0b912298791c1837606bc'
+         'daffd2ba5917a263cdff5f38dcf8c323'
          '2776eab5ebb7f9cc62dd2199a3a24382'
          '4030ee1c08dd1e843c0225b772360e76'
          '6fd395bacbd7b6e47c7b74854b478363')
