--- a/python/trunk/PKGBUILD
+++ b/python/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=python
 pkgver=3.1.3
-pkgrel=1
+pkgrel=2
 _pybasever=3.1
 pkgdesc="Next generation of the python high-level scripting language"
 arch=('i686' 'x86_64')
 license=('custom')
-url="http://www.python.org"
+url="http://www.python.org/"
 depends=('expat' 'bzip2' 'gdbm' 'openssl' 'libffi' 'zlib')
 makedepends=('tk' 'sqlite3')
 optdepends=('tk: for tkinter')
@@ -61,6 +61,10 @@ package() {
   ln -sf python3-config ${pkgdir}/usr/bin/python-config
   ln -sf idle3 ${pkgdir}/usr/bin/idle
   ln -sf pydoc3 ${pkgdir}/usr/bin/pydoc
+
+  # fix FS#22552
+  ln -sf ../../libpython${_pybasever}.so \
+    ${pkgdir}/usr/lib/python${_pybasever}/config/libpython${_pybasever}.so
 
   # clean-up reference to build directory
   sed -i "s#$srcdir/Python-${pkgver}:##" $pkgdir/usr/lib/python3.1/config/Makefile
