upgpkg: grub2 1.99~rc1-1 update to 1.99rc
git-svn-id: file:///srv/repos/svn-packages/svn@108001 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grub2/trunk/PKGBUILD
+++ b/grub2/trunk/PKGBUILD
@@ -99,7 +99,7 @@ build_grub2-common_and_bios() {
 		--bindir=/bin --sbindir=/sbin \
 		--mandir=/usr/share/man --infodir=/usr/share/info \
 		--sysconfdir=/etc --enable-nls \
-		--program-transform-name=s,grub,grub
+		--program-transform-name=s,grub,grub,
 	CFLAGS="" make 
 }
 
@@ -131,7 +131,7 @@ build_grub2-efi() {
 		--prefix=/usr --bindir=/bin \
 		--sbindir=/sbin --mandir=/usr/share/man \
 		--infodir=/usr/share/info --sysconfdir=/etc \
-		--enable-nls --program-transform-name=s,grub,grub
+		--enable-nls --program-transform-name=s,grub,grub,
 	CFLAGS="" make 
 }
 
@@ -204,3 +204,13 @@ package_grub2-efi-i386() {
         rm -rf ${pkgdir}/{boot,bin,sbin,etc,usr/share}
         rm ${pkgdir}/usr/lib/grub/{grub-mkconfig_lib,update-grub_lib}
 }
+sha1sums=('866b6979974ad7209d236cb4e1819039f0bd1c6d'
+          'f116fed72eb70da1d503cf3c225dce68d658dabd'
+          'b04994c005910b4bf123f034b30109d5c8d6fd86'
+          '963517b6f178d3cec3ff65f64cf6128cbde2f515'
+          '644fe2bd6edaff03bc2e7a27bf1c0845a4568d6f'
+          '2c22c7e900e4da9a555d26d455ed3fbf974d553d'
+          '94b91fb6c7ddae9141af7568d476d69670f2706e'
+          '29ea1e5d400d21a199724db8f1da30c66b310595'
+          '82a27eca5277218cf57c6c5767e0b17a72f62229'
+          '22bd1a4c18d8b93130ca46348c2a9ea2f8b90c6b')
