upgpkg: grub2 1.99~rc1-1 add provides line, remove group
git-svn-id: file:///srv/repos/svn-packages/svn@108004 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grub2/trunk/PKGBUILD
+++ b/grub2/trunk/PKGBUILD
@@ -17,7 +17,6 @@ arch=('i686' 'x86_64')
 license=('GPL3')
 makedepends=('bdf-unifont' 'python2' 'xz' 'autogen' 'texinfo' 'help2man' 'gettext' 'device-mapper')
 options=(strip purge docs zipman !emptydirs)
-groups=('grub2')
 
 source=("ftp://alpha.gnu.org/gnu/grub/grub-${pkgver}.tar.gz"
 	"ftp://ftp.archlinux.org/other/grub2/grub2_extras_lua_r${_grub2_lua_ver}.tar.xz"
@@ -121,8 +120,6 @@ build_grub2-efi() {
 	# start the actual build process
 	cd ${srcdir}/grub2_efi-${pkgver}
 	./autogen.sh
-	#install -d ${srcdir}/grub2_efi-${pkgver}/BUILD_EFI_i386
-	#cd ${srcdir}/grub2_efi-${pkgver}/BUILD_EFI_i386
 
 	CFLAGS="" ./configure \
 		--with-platform=efi --target=i386 \
@@ -182,6 +179,7 @@ package_grub2-bios() {
 	pkgdesc="The GNU GRand Unified Bootloader version 2 - Built for PC BIOS"
 	depends=(grub2-common=${pkgver})
 	replaces=('grub2')
+	provides=('grub2')
   
 	cd ${srcdir}/grub2_bios-${pkgver}
 	make DESTDIR=${pkgdir} install 
