--- a/cmus/trunk/PKGBUILD
+++ b/cmus/trunk/PKGBUILD
@@ -4,22 +4,33 @@
 
 pkgname=cmus
 pkgver=2.3.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A very feature-rich ncurses-based music player"
 arch=('i686' 'x86_64')
 url="http://cmus.sourceforge.net/"
 license=('GPL')
-# namcap assured me it was safe to remove ncurses and the like... /shrug
-depends=('sh' 'libao' 'libmpcdec' 'ffmpeg' 'flac' 'libmad' 'faad2')
-makedepends=('libmp4v2')
-optdepends=('libmp4v2')
-changelog=ChangeLog
+depends=('ncurses')
+makedepends=('libao' 'libmpcdec' 'ffmpeg' 'flac' 'libmad' 'faad2' 'libmodplug' 'libvorbis' 'libpulse' 'wavpack')
+optdepends=('alsa-lib: for ALSA output plugin support'
+            'libao: for AO output plugin support'
+            'libpulse: for PulseAudio output plugin support'
+            'ffmpeg: for ffmpeg input plugin support'
+            'libmodplug: for modplug input plugin support'
+            'faad2: for input AAC plugin support'
+            'libmad: for mp3 input plugin support'
+            'libmpcdec: for musepack input plugin support'
+            'wavpack: for wavpack input plugin support'
+            'libvorbis: for vorbis input plugin support'
+            'flac: for flac input plugin support')
 source=("http://downloads.sourceforge.net/$pkgname/$pkgname-v$pkgver.tar.bz2")
 md5sums=('220e875e4210a6b54882114ef7094a79')
 sha1sums=('ca8c40c86ead8af05a1ca703caa4131217832114')
 
 build() {
   cd "$srcdir/$pkgname-v$pkgver"
+  sed -i 's|ffmpeg/avcodec.h|libavcodec/avcodec.h|' configure ffmpeg.c
+  sed -i 's|ffmpeg/avformat.h|libavformat/avformat.h|' ffmpeg.c
+  sed -i 's|ffmpeg/avio.h|libavformat/avio.h|' ffmpeg.c
   ./configure prefix=/usr CONFIG_ARTS=n
   make
 }
