--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,20 +3,21 @@
 
 pkgname=bash-completion
 pkgver=1.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Programmable completion for the bash shell"
 arch=('any')
 url="http://bash-completion.alioth.debian.org/"
 license=('GPL')
 depends=('bash')
-source=(http://bash-completion.alioth.debian.org/files/$pkgname-$pkgver.tar.bz2)
-md5sums=('88c022a98a02a02293716f840eadd884')
-sha1sums=('47e6fb919ae227e74172870379b0fe999a2ae70d')
+source=(http://bash-completion.alioth.debian.org/files/$pkgname-$pkgver.tar.bz2 python.patch)
+md5sums=('88c022a98a02a02293716f840eadd884' '4657ba3d32f6f38765327fc640e5113d')
+sha1sums=('47e6fb919ae227e74172870379b0fe999a2ae70d' 'b6acd3317558615bf2949694f9c4d17e95eb0d07')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
+  patch -p0 < ../python.patch
 
-  # fixes for archlinux
+# fixes for archlinux
   sed -i 's#/sbin" lsmod#/bin" lsmod#' bash_completion
 
   ./configure --prefix=/usr --sysconfdir=/etc
