upgpkg: grub2 1.99~rc1-2 remove conflicts with grub2; fix typo in install message
git-svn-id: file:///srv/repos/svn-packages/svn@108042 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grub2/trunk/PKGBUILD
+++ b/grub2/trunk/PKGBUILD
@@ -11,7 +11,7 @@ _grub2_915_ver=6
 pkgname=('grub2-common' 'grub2-bios' 'grub2-efi-i386')
 pkgbase="grub2"
 pkgver='1.99~rc1'
-pkgrel=1
+pkgrel=2
 url="http://www.gnu.org/software/grub/"
 arch=('i686' 'x86_64')
 license=('GPL3')
@@ -136,7 +136,7 @@ package_grub2-common() {
 	pkgdesc="The GNU GRand Unified Bootloader version 2 - Files common for all platforms"
 	install="grub2.install"
 	depends=('xz' 'freetype2' 'device-mapper')
-	conflicts=('grub2' 'grub')
+	conflicts=('grub')
 	backup=('boot/grub/grub.cfg' 'etc/default/grub' 'etc/grub.d/40_custom')
   
 	cd ${srcdir}/grub2_bios-${pkgver}
