fixed typo now for real
git-svn-id: file:///srv/repos/svn-packages/svn@108048 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grub2-efi-x86_64/trunk/PKGBUILD
+++ b/grub2-efi-x86_64/trunk/PKGBUILD
@@ -39,7 +39,7 @@ build() {
 	fi
 
 	# add grub-extras
-	export GRUB_CONTRIB=${srcdir}/grub2-${pkgver}/grub2-extras/  
+	export GRUB_CONTRIB=${srcdir}/grub-${pkgver}/grub2-extras/  
 	install -d ${srcdir}/grub-${pkgver}/grub2-extras  
 	bsdtar xf ${srcdir}/grub2_extras_lua_r${_grub2_lua_ver}.tar.xz \
 		-C ${srcdir}/grub-${pkgver}/grub2-extras
