--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,17 +7,22 @@ pkgver=3.2
 pkgrel=2
 pkgdesc="plugin that monitors customizable programs stdout for the Xfce4 panel"
 arch=(i686 x86_64)
-license=('LGPL2')
-url="http://xfce-goodies.berlios.de/"
+license=('LGPL2.1')
+url="http://goodies.xfce.org/projects/panel-plugins/xfce4-genmon-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'libxfcegui4')
-makedepends=('intltool')
+makedepends=('intltool' 'xfce4-dev-tools')
 options=('!libtool')
-source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/3.2/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('5f292aa102a87d45207b6a373939a35d')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/3.2/${pkgname}-${pkgver}.tar.bz2
+	xfce4-genmon-plugin-3.2-link_to_libxfcegui4.patch)
+md5sums=('5f292aa102a87d45207b6a373939a35d'
+         '7938f59509aca83ea8d3adc62d8f5892')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
+  # panel 4.8 patch from http://bugzilla.xfce.org/show_bug.cgi?id=6754
+  patch -Np1 -i ${srcdir}/xfce4-genmon-plugin-3.2-link_to_libxfcegui4.patch
+  xdt-autogen
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib \
