upgpkg: xfce4-timer-plugin 0.6.1-1 upstream update and add a fix for panel 4.8 from git
git-svn-id: file:///srv/repos/svn-packages/svn@108093 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -8,16 +8,20 @@ pkgrel=1
 pkgdesc="plugin to track time for the Xfce4 panel"
 arch=(i686 x86_64)
 license=('GPL2')
-url="http://xfce-goodies.berlios.de/"
+url="http://goodies.xfce.org/projects/panel-plugins/xfce4-timer-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'libxfcegui4')
 makedepends=('intltool')
 options=('!libtool')
-source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.6/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('ba5ae0e25f69517338f74a27fbaf4ca2')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.6/${pkgname}-${pkgver}.tar.bz2
+	panel48.patch)
+md5sums=('ba5ae0e25f69517338f74a27fbaf4ca2'
+         'fc9444aa98d7ef9c61d97dbd9f47e082')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
+  # patch from git master
+  patch -Np1 -i ${srcdir}/panel48.patch
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib/ \
