hopefully fix circular dependency
git-svn-id: file:///srv/repos/svn-packages/svn@108120 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/audacious-plugins/trunk/PKGBUILD
+++ b/audacious-plugins/trunk/PKGBUILD
@@ -4,15 +4,14 @@
 
 pkgname=audacious-plugins
 pkgver=2.4.3
-pkgrel=1
+pkgrel=2
 pkgdesc='Plugins for Audacious'
 arch=('i686' 'x86_64')
 url='http://audacious-media-player.org/'
 license=('GPL')
 
-depends=("audacious>=${pkgver}")
-
-makedepends=('alsa-lib' 'pulseaudio' 'jack' 'lame' 'libvorbis' 'flac'
+makedepends=("audacious>=${pkgver}"
+             'alsa-lib' 'pulseaudio' 'jack' 'lame' 'libvorbis' 'flac'
              'faad2' 'ffmpeg' 'fluidsynth' 'libcdio' 'libsidplay' 'wavpack'
              'libnotify' 'lirc-utils' 'curl' 'libmtp'
              'neon' 'libmms' 'libcue')
