--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=ed
 pkgver=1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="A POSIX-compliant line editor"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -16,7 +16,10 @@ md5sums=('e66c03d7e4c67b025d5b6093ec678267')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/ --mandir=/usr/share/man --infodir=/usr/share/info
+  ./configure --prefix=/ \
+	--mandir=/usr/share/man \
+	--infodir=/usr/share/info \
+	CFLAGS="$CFLAGS" LDFLAGS="$LDFLAGS"
   make || return 1
 }
 
