upgpkg: gmime 2.4.22-1 update to 2.4.22
git-svn-id: file:///srv/repos/svn-packages/svn@108160 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gmime/trunk/PKGBUILD
+++ b/gmime/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Ben <ben@benmazer.net>
 
 pkgname=gmime
-pkgver=2.4.21
+pkgver=2.4.22
 pkgrel=1
 pkgdesc="Core mime parsing library"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
 url="http://spruce.sourceforge.net/gmime/"
-depends=('glib2>=2.24.1' 'zlib>=1.2.5')
-makedepends=('gtk-sharp-2>=2.12.10' 'pkgconfig')
+depends=('glib2>=2.26.1' 'zlib>=1.2.5')
+makedepends=('gtk-sharp-2' 'pkgconfig')
 options=('!libtool')
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.4/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('c183bfbd20c4da5e93c24775ff7d6caf836646b43936e15f4f4810eda5181ab5')
+sha256sums=('122ebaa0462978e8de03ee3354cd695e816570a22550c846890cc37aa8ce5a81')
 
 build() {
   # get rid of that .wapi errors in fakeroot
